# Simubot_WS

./: QUICK_START.md  README.md  check_setup.sh  create_web_dashboard.py  enter_container.sh  launch_complete_sim.sh  launch_gazebo.sh  launch_headless_sim.sh  launch_sim.sh  launch_visual_sim.sh  launch_working_sim.sh  run_simulation.sh  setup_xquartz.sh  test_gazebo.sh
install/: local_setup.sh  setup.sh
install/custom_msgs/share/custom_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/custom_msgs/share/custom_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  custom_msgsConfig-version.cmake  custom_msgsConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/custom_msgs/share/custom_msgs/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/custom_msgs/share/custom_msgs/msg/: DetectedObject.idl  DetectedObject.msg  DetectedObjectArray.idl  DetectedObjectArray.msg
install/simubot_decision/lib/simubot_decision/: decision_engine
install/simubot_decision/share/simubot_decision/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simubot_decision/share/simubot_decision/cmake/: simubot_decisionConfig-version.cmake  simubot_decisionConfig.cmake
install/simubot_decision/share/simubot_decision/environment/: ament_prefix_path.dsv  path.dsv
install/simubot_launch/share/simubot_launch/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  simubot_full.launch.py  simubot_nodes.launch.py
install/simubot_launch/share/simubot_launch/cmake/: simubot_launchConfig-version.cmake  simubot_launchConfig.cmake
install/simubot_launch/share/simubot_launch/environment/: ament_prefix_path.dsv  path.dsv
install/simubot_vision/lib/simubot_vision/: vision_node
install/simubot_vision/share/simubot_vision/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlebot3/share/turtlebot3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3/share/turtlebot3/cmake/: turtlebot3Config-version.cmake  turtlebot3Config.cmake
install/turtlebot3/share/turtlebot3/environment/: ament_prefix_path.dsv  path.dsv
install/turtlebot3_bringup/share/turtlebot3_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_bringup/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig-version.cmake  turtlebot3_bringupConfig.cmake
install/turtlebot3_bringup/share/turtlebot3_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/turtlebot3_bringup/share/turtlebot3_bringup/launch/: camera.launch.py  robot.launch.py  rviz2.launch.py  turtlebot3_state_publisher.launch.py
install/turtlebot3_bringup/share/turtlebot3_bringup/param/: burger.yaml  waffle.yaml  waffle_pi.yaml
install/turtlebot3_bringup/share/turtlebot3_bringup/script/: 99-turtlebot3-cdc.rules  create_udev_rules
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_cartographer/share/turtlebot3_cartographer/cmake/: turtlebot3_cartographerConfig-version.cmake  turtlebot3_cartographerConfig.cmake
install/turtlebot3_cartographer/share/turtlebot3_cartographer/config/: turtlebot3_lds_2d.lua
install/turtlebot3_cartographer/share/turtlebot3_cartographer/environment/: ament_prefix_path.dsv  path.dsv
install/turtlebot3_cartographer/share/turtlebot3_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
install/turtlebot3_cartographer/share/turtlebot3_cartographer/rviz/: tb3_cartographer.rviz
install/turtlebot3_description/share/turtlebot3_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_description/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig-version.cmake  turtlebot3_descriptionConfig.cmake
install/turtlebot3_description/share/turtlebot3_description/environment/: ament_prefix_path.dsv  path.dsv
install/turtlebot3_description/share/turtlebot3_description/rviz/: model.rviz
install/turtlebot3_description/share/turtlebot3_description/urdf/: common_properties.urdf  turtlebot3_burger.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
install/turtlebot3_example/share/turtlebot3_example/: package.sh  package.xml
install/turtlebot3_navigation2/share/turtlebot3_navigation2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_navigation2/share/turtlebot3_navigation2/cmake/: turtlebot3_navigation2Config-version.cmake  turtlebot3_navigation2Config.cmake
install/turtlebot3_node/lib/turtlebot3_node/: turtlebot3_ros
install/turtlebot3_node/share/turtlebot3_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_teleop/share/turtlebot3_teleop/: package.sh  package.xml
log/: latest_build
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: DetectedObject.msg  DetectedObjectArray.msg
src/custom_msgs/msg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/custom_msgs/msg/log/: latest_build
src/simubot_decision/: CMakeLists.txt  package.xml
src/simubot_decision/src/: decision_engine.cpp
src/simubot_launch/: CMakeLists.txt  package.xml
src/simubot_launch/launch/: simubot_full.launch.py  simubot_nodes.launch.py
src/simubot_vision/: setup.py
src/simubot_vision/simubot_vision/: vision_node.py
(+97 files in other folders)
