<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for SimuBot: DetectedObject and DetectedObjectArray.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- 1) Buildtool dependencies: ament_cmake and the ROS IDL generator -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- 2) Runtime dependencies: any std or ROS message types referenced in our .msg files -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- 3) (Optional) Lint/test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 4) Must declare membership in rosidl_interface_packages at top level -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <!-- 5) Export the build type so ament knows to use CMake -->
    <build_type>ament_cmake</build_type>
  </export>
</package>