<?xml version="1.0"?>
<package format="3">
  <name>simubot_launch</name>
  <version>0.0.0</version>
  <description>Launch files for the SimuBotVision simulation (Gazebo + vision + decision).</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Buildtool for this CMake‐based package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Must match the find_package(...) calls in CMakeLists.txt -->
  <depend>gazebo_ros</depend>
  <depend>turtlebot3_description</depend>

  <!-- These are the “exec” dependencies: at runtime, your launch file will import these -->
  <exec_depend>simubot_vision</exec_depend>
  <exec_depend>simubot_decision</exec_depend>

  <!-- (Optional) lint/test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>